# council

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre-pr-tests.sh
.github/workflows/: ci.yml  pr-title.yml  release.yml  worktree.yml
agents/: architect.md  council.json  creator.md  firebrand.md  guardian.md  implementer.md  mediator.md  scout.md  sentinel.md  skeptic.md  steward.md
council/: Cargo.toml  __main__.py  agent.py  agent_base.py  agent_sdk_backend.py  config.py  orchestrator.py  output.py  prompt.py  report.py  schema.py  types.py
council-cli/: Cargo.toml
council-cli/src/: client.rs  error.rs  lib.rs  main.rs
council-daemon/: Cargo.toml
council-daemon/src/: config.rs  daemon_config.rs  error.rs  lib.rs  main.rs  output.rs  report.rs  server.rs  setup.rs  types.rs
council-daemon/src/hooks/: basic.sh  claude.sh  hook.sh
council-daemon/tests/: integration.rs
council-proto/: Cargo.toml  build.rs
council-proto/src/: lib.rs
docs/: migration-reference.md
docs/research/: council-roles-research.md
prompts/: brevity.md  engagement.md  motion.md  response-format.md  round-1.md  round-2.md  round-3.md  vote-format.md  vote.md
proto/council/v1/: council.proto
src/: agent.rs  api_backend.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  motion.rs  orchestrator.rs  output.rs  prompt.rs  report.rs  schema.rs  sdk_backend.rs  types.rs
tests/: conftest.py  mock_agent.py  test_trolley.py  trolley.rs
