[package]
name = "council"
version = "0.1.0"
edition = "2021"
description = "Turn-based council discussion & consensus system using Claude"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenvy = "0.15"
chrono = "0.4"
