[package]
name = "council-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "council-cli"
path = "src/main.rs"

[dependencies]
council-proto = { path = "../council-proto" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
