[package]
name = "council-cli"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nabi-allenby/council"
description = "CLI client for the Council deliberation system"

[lib]
name = "council_cli"
path = "src/lib.rs"

[[bin]]
name = "council-cli"
path = "src/main.rs"

[dependencies]
council-proto = { path = "../council-proto", version = "1.0.0" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
