[package]
name = "council-daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "council_daemon"
path = "src/lib.rs"

[[bin]]
name = "council-daemon"
path = "src/main.rs"

[dependencies]
council-proto = { path = "../council-proto" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-stream = "0.1"
