[package]
name = "council-proto"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nabi-allenby/council"
description = "gRPC protocol definitions for the Council deliberation system"

[dependencies]
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
