[package]
name = "council"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nabi-allenby/council"
description = "Structured group deliberation via gRPC — daemon and CLI"

[[bin]]
name = "council-daemon"
path = "src/bin/council-daemon.rs"

[[bin]]
name = "council-cli"
path = "src/bin/council-cli.rs"

[dependencies]
council-daemon = { path = "../council-daemon", version = "0.1.0" }
council-cli = { path = "../council-cli", version = "0.1.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
